2007-06-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-_adjustOwner]): sharedFolderName and otherUsersFolderName may be
	nil, in which case a crash happens when calling hasPrefix:.
	([SOGoMailFolder -_sharesACLs]): same as above.
	([SOGoMailFolder -otherUsersPathToFolder]): same as above. If
	otherUsersFolderName is nil, we return nil.
	([SOGoMailFolder -httpURLForAdvisoryToUser:uid]): if we receive
	nil from [self otherUsersPathToFolder], we return nil too.

2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-_urlPreferringParticle:expectedoverThisOne:possible]): unescape
	the result of [self baseURLInContext:] to avoid a double escaping
	in the resulting string.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -aclsForUser:uid]): if
	the user has the "ObjectReader" role on the parent container, then
	he is granted the "ObjectViewer" role on this object. Same for
	"ObjectEraser", although this might change later.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): determine the toolbar filename based on the
	permissions declared by the securitymanager. The role mechanism
	has been adjusted on a lowerlevel so we can simplify the code.

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-initWithName:newNameinContainer:newContainer]): read the content
	directly from here. That way we can determine whether the object
	is being created.
	([SOGoContentObject -aclsForUser:uid]): if the object is new and
	the ObjectCreator role is enabled, we also grant the ObjectEditor
	role to the current user.

	* UI/Common/UIxFolderActions.m ([-canAccessContentAction]):
	changed the method paradigm to only return HTTP code 204. Not test
	is done whatsoever since the security manager does it for us.

	* UI/Contacts/UIxContactsListView.m ([-canAccessContentAction]):
	removed method because the same exists in UIxFolderActions.m
